--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://localhost:5000",
+  "proxy": "https://yo-recipes.herokuapp.com",
   "eslintConfig": {
     "extends": [
       "react-app",
